
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 4 (rev 1552 - September 28, 2006)
====================================

* Fixed default manager_theme selection when added new manager users. (1552)
* Update AjaxSearch to most recent version. (1550)
* Update to delete categories to check appropriate permissions & display correctly. (1550)
* [FS#124] RegClientStartupScript and RegClientScript not always inserting code properly. (1550)
* Preliminary fixes for new QuickEdit using moo.fx (1549)
* Only make RTE for chunks load if selected from dropdown (ie. stop it loading by default when RTE is selected in site config).
* Remove the RTE code completely from mutate_templates.dynamic.php - causing problems when RTE is set as default in system config and strips out essential template code when used.
* [FS#499] Blank config.inc.php PRIOR to installation no longer errors (1534)
* Fixed New Template and New Chunk actions in manager (1533)
* Replaced hard-coded Working image with style.php var (1533)
* Update Manager to work better in IE (1530)
* Move Manage Metatags to top level resources menu. (1529)
* Default setting for show_preview changed to off. (1528)
* [FS#538] Minimally permissioned manager users can no longer move documents. (1527)
* Eliminate numerous warnings and simplify frames structure. (1522)
* [FS#406] and [FS#539] Reapplied fix to auto-publishing.
* [FS#104] Remove all references to 'etomite_charset' and replace with 'modx_charset'. Updated getSettings() in document parser and settings.inc.php to add 'etomite_charset' as an alias for backwards compatibility.
* Update to BottomButtonBar plugin for changes made regarding RTE selection (changes $_GET to $_REQUEST for chunks and templates).